dark mode still needs fixing

--- a/sass/color-switch.scss
+++ b/sass/color-switch.scss
@@ -40,32 +40,49 @@
     display:block;
     width: calc(100% - 40px);
     height: 24px;
-    border-width:1px;
-    border-color:$white;
+
     position: absolute;
     left: 50%;
     top: 50%;
     transform:translate(-50%,-50%);
     &:before {
       position: absolute;
-      width: 50%;
-      height: calc(100% - 4px);
+      left: 0;
+      width: 100%;
+      height: 8px;
+      border-radius:4px; 
+      border: 1px solid currentColor;
+      top: calc(50% - 4px);
+      @media(min-width:$t7) {
+        background: currentColor;
+        border: 1px solid $white; 
+      }
+    }
+    &:after {
+      position: absolute;
+      width: 24px;
+      height:24px;
+     
+      border-radius: 50%;
       background:$white;
-      left: 2px;
+      left: 0px;
       top: 50%;
       transform:translateY(-50%);
+      @media(min-width: $t7) {
+        border: 3px double currentColor;
+      }
     }
     @media(min-width:$t7) {
-      background:currentColor;
+     // background:currentColor;
     }
 
   }
 
   button#color-mode-button[data-colormode="color"] {
 
-      &:before {
+      &:after {
         left: auto;
-        right: 2px;
+        right: 0px;
       }
 
   }
