--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -20,6 +20,7 @@ $main-color: #404041;
 $link-color: #bc812c;
 $link-color-hover: black;
 $white: #fafafa;
+$black: #212121;
 
 /*FONTS*/
 $font-family:  Helvetica, sans-serif;
